--- a/index.html
+++ b/index.html
@@ -181,8 +181,15 @@
         the @readFile macro covered above.</p>
     <ol>
         <li>
-            <a href="http://daily.w3viewer.com/">Open Web Platform Daily Digest <span>(Šime Vidas, daily.w3viewer.com)</span></a>
+            <a href="http://shop.oreilly.com/product/9780596806767.do">JavaScript Patterns <span>Stoyan Stefanov, shop.oreilly.com</span></a>
         </li>
+        <li>
+            <a href="http://shop.oreilly.com/product/0636920018421.do">JavaScript Web Applications <span>Alex MacCaw, shop.oreilly.com</span></a>
+        </li>
+        <li>
+            <a href="http://daily.w3viewer.com/">Open Web Platform Daily Digest <span>Šime Vidas, daily.w3viewer.com</span></a>
+        </li>
+
     </ol>
 </section>
 
