--- a/index.html
+++ b/index.html
@@ -195,16 +195,14 @@
         multipart/form-data Content-Type, with the enctype attribute in HTML. In cURL we can pair the -F option and
         the @readFile macro covered above.</p>
     <ol>
-        <li>
-            <a href="http://shop.oreilly.com/product/9780596806767.do">JavaScript Patterns <span>Stoyan Stefanov, shop.oreilly.com</span></a>
-        </li>
-        <li>
-            <a href="http://shop.oreilly.com/product/0636920018421.do">JavaScript Web Applications <span>Alex MacCaw, shop.oreilly.com</span></a>
-        </li>
-        <li>
-            <a href="http://daily.w3viewer.com/">Open Web Platform Daily Digest <span>Šime Vidas, daily.w3viewer.com</span></a>
-        </li>
-
+        <li><a href="http://shop.oreilly.com/product/9780596806767.do">
+          JavaScript Patterns <span>Stoyan Stefanov, shop.oreilly.com</span></a></li>
+        <li><a href="http://shop.oreilly.com/product/0636920018421.do">
+            JavaScript Web Applications <span>Alex MacCaw, shop.oreilly.com</span></a></li>
+        <li><a href="http://javascriptweekly.com/">
+            JavaScript Weekly <span>Peter Cooper, javascriptweekly.com</span></a></li>
+        <li><a href="http://daily.w3viewer.com/">
+            Open Web Platform Daily Digest <span>Šime Vidas, daily.w3viewer.com</span></a></li>
     </ol>
 </section>
 
