--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@
             <span>Eric Bidelman, youtube.com</span></a></li>
         <li><a href="http://addyosmani.com/blog/a-few-new-things-coming-to-javascript/">
             A Few New Things Coming To JavaScript <span>Addy Osmani, addyosmani.com</span></a></li>
+        <li><a href="http://vimeo.com/49384334">
+            Pure JavaScript <span>Christian Johansen, vimeo.com</span></a></li>
         <li><a href="http://html5doctor.com/methods-of-communication/">
             Methods of communication <span>Remy Sharp, html5doctor.com</span></a></li>
         <li><a href="http://tjholowaychuk.com/post/27984551477/components">
