newsletter using mailchimp

--- a/index.html
+++ b/index.html
@@ -206,6 +206,16 @@
 </section>
 
 
+<section>
+    <h2>Newsletter</h2>
+    <form action="http://superherojs.us5.list-manage2.com/subscribe/post?u=862185f1aae866d58d91bc544&amp;id=87fac3d768" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <label for="mce-EMAIL">Email Address</label>
+      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+      <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">
+    </form>
+</section>
+
+
 </div>
 </body>
 </html>
