Follow us for updates

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="content-language" content="en">
 
     <link href='icons/stylesheets/general_foundicons.css' rel='stylesheet' type='text/css'>
+    <link href='icons/stylesheets/social_foundicons.css' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700' rel='stylesheet' type='text/css'>
 
@@ -41,6 +42,13 @@
         This page is a collection of the best articles we've found on the topic.
         We recommend reading the articles in order. Have fun!
         <a href="#"></a>
+    </p>
+    <p>
+        Follow us on <i class="foundicon-twitter"></i>
+        <a href="http://twitter.com/superhero_js">Twitter</a> or
+        <i class="foundicon-github"></i>
+        <a href="https://github.com/superherojs/superherojs.github.com">GitHub</a>
+        for updates. Or you can subscribe to <a href="#newsletter">our newsletter</a>.
     </p>
     <p class="meta">
         Organized by
