Remove social foundation icons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <meta http-equiv="content-language" content="en">
 
     <link href='icons/stylesheets/general_foundicons.css' rel='stylesheet' type='text/css'>
-    <!-- <link href='icons/stylesheets/social_foundicons.css' rel='stylesheet' type='text/css'> -->
 
     <link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700' rel='stylesheet' type='text/css'>
@@ -42,9 +41,7 @@
             We recommend reading the articles in order. Have fun!
         </p>
         <p>
-            Follow us on <i class="foundicon-twitter"></i>
-            <a href="http://twitter.com/superhero_js">Twitter</a> or
-            <i class="foundicon-github"></i>
+            Follow us on <a href="http://twitter.com/superhero_js">Twitter</a> or
             <a href="https://github.com/superherojs/superherojs.github.com">GitHub</a>,
             or <a href="#newsletter">our newsletter</a> for updates.
         </p>
@@ -170,11 +167,6 @@
             How browsers work <span>Tali Garsiel & Paul Irish, html5rocks.com</span></a></li>
         <li><a href="http://paulirish.com/2013/webkit-for-developers/">
             WebKit for Developers <span>Paul Irish, paulirish.com</span></a></li>
-        <li><a href="http://www.html5rocks.com/en/tutorials/internals/howbrowserswork/">How browsers work
-            <span>Tali Garsiel & Paul Irish, html5rocks.com</span></a>
-        </li>
-        <li><a href="http://paulirish.com/2013/webkit-for-developers/">WebKit for Developers <span>Paul Irish, paulirish.com</span></a>
-        </li>
     </ol>
 </section>
 
@@ -202,12 +194,10 @@
 <section id="resources" class="more">
     <div class="content">
         <h2><i class="foundicon-mail"></i> <span>Books and other resources</span></h2>
-        <p>What about HTML forms with file uploads? As you know from writing HTML file upload form, these use a
-            multipart/form-data Content-Type, with the enctype attribute in HTML. In cURL we can pair the -F option and
-            the @readFile macro covered above.</p>
+        <p>Books and stuff</p>
         <ol>
             <li><a href="http://shop.oreilly.com/product/9780596806767.do">
-              JavaScript Patterns <span>Stoyan Stefanov, shop.oreilly.com</span></a></li>
+                JavaScript Patterns <span>Stoyan Stefanov, shop.oreilly.com</span></a></li>
             <li><a href="http://shop.oreilly.com/product/0636920018421.do">
                 JavaScript Web Applications <span>Alex MacCaw, shop.oreilly.com</span></a></li>
             <li><a href="http://javascriptweekly.com/">
