Remove id on h2

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
 
 <section id="browser" class="links close">
-    <h2 id="browser"><i class="foundicon-globe"></i> <span>The browser</span></h2>
+    <h2><i class="foundicon-globe"></i> <span>The browser</span></h2>
     <!-- <p>Understanding the browser ...</p> -->
     <ol>
         <li><a href="http://www.html5rocks.com/en/tutorials/internals/howbrowserswork/">
