Good blog post on module pattern

--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
             Asynchronous JS: Callbacks, Listeners, Control Flow Libs and Promises <span>Sebastian Porto, sporto.github.com</span></a></li>
         <li><a href="http://www.youtube.com/watch?v=juRtEEsHI9E">
             I .promise() to show you .when() to use Deferreds <span>Alex McPherson, youtube.com</span></a></li>
+        <li><a href="http://www.adequatelygood.com/2010/3/JavaScript-Module-Pattern-In-Depth">
+            JavaScript Module Pattern: In-Depth <span>Ben Cherry, adequatelygood.com</span></a></li>
         <li><a href="http://singlepageappbook.com/single-page.html">
             Single page apps in depth <span>Mikito Takada, singlepageappbook.com</span></a></li>
         <li><a href="https://gist.github.com/desandro/4686136">
