Max width on links.

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     </div>
 </div></section>
 
-<section class="links alternate toc two">
+<section class="alternate toc two">
     <p>
         So, you've read <a href="http://shop.oreilly.com/product/9780596517748.do">The Good Parts</a> &mdash; what should you read next?
-        These articles will help you understand the syntax of JavaScript, how to organize your projects, how to test and tweak your code,
+        These articles will help you understand the syntax of JavaScript, how to organize your projects, how to test your code,
         and what's on the horizon. Have fun!
     </p>
     <ol>
