--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       })();
     </script>
 </head>
-<body id="superhero">
+<body id="superhero"><div class="container">
 
 <section class="init one invert"><div class="inner">
     <div class="animated fadeInDown">
@@ -216,5 +216,5 @@
 </section>
 
 
-</body>
+</div></body>
 </html>
