--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </section>
 
 
-<section class="links" id="language">
+<section class="links top" id="language">
     <h2><span><i class="foundicon-idea"></i> Understanding JavaScript</span></h2>
 
     <ol>
@@ -174,7 +174,7 @@
 </section>
 
 
-<section id="keepaneyeon" class="links close">
+<section id="keepaneyeon" class="links close last">
     <h2><i class="foundicon-right-arrow"></i> <span>Upcoming</span></h2>
     <!-- <p>New shit</p> -->
     <ol>
