Remove animations fucking up webfonts

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700' rel='stylesheet' type='text/css'>
 
     <link href='css/reset.css' rel='stylesheet' type='text/css'>
-    <link href='css/animate.css' rel='stylesheet' type='text/css'>
     <link href='css/images.css' rel='stylesheet' type='text/css'>
     <link href='css/style.css' rel='stylesheet' type='text/css'>
 
@@ -33,21 +32,17 @@
 <body id="superhero"><div class="container">
 
 <section class="init one invert"><div class="inner">
-    <div class="animated fadeInDown">
-        <h1><span>Superhero JavaScript</span></h1>
-    </div>
-    <div class="animated fadeInUp">
-        <p>
-            Maintaining a large JavaScript code base is not easy &mdash;
-            especially since great articles on how to do this are hard to find.
-            This page is a collection of the best articles we've found on the topic.
-        </p>
-        <p>
-            Follow us on <a href="http://twitter.com/superhero_js">Twitter</a> or
-            <a href="https://github.com/superherojs/superherojs.github.com">GitHub</a>,
-            or <a href="#newsletter">our newsletter</a>.
-        </p>
-    </div>
+    <h1><span>Superhero JavaScript</span></h1>
+    <p>
+        Maintaining a large JavaScript code base is not easy &mdash;
+        especially since great articles on how to do this are hard to find.
+        This page is a collection of the best articles we've found on the topic.
+    </p>
+    <p>
+        Follow us on <a href="http://twitter.com/superhero_js">Twitter</a>,
+        <a href="https://github.com/superherojs/superherojs.github.com">GitHub</a>,
+        or check out our <a href="#newsletter">newsletter</a>.
+    </p>
 </div></section>
 
 <section class="alternate toc two">
@@ -65,14 +60,12 @@
         <li><a href="#keepaneyeon">Upcoming: New things coming to JavaScript</a></li>
         <li><a href="#resources">Next steps: Books and other resources</a></li>
     </ol>
-    <!--
-    <p class="meta">
+    <p class="first">
         Organized by
         <a href="http://kimjoar.net">@kimjoar</a>,
         <a href="https://twitter.com/madsmobaek">@madsmobaek</a> and
         <a href="http://bjorkoy.com/">@olav</a>.
     </p>
-    -->
 </section>
 
 
