--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <li><a href="#organizing">Organizing your code: API design, deferreds, files and folders</a></li>
         <li><a href="#testing">Testing your application: Testable code, readable tests</a></li>
         <li><a href="#tools">Tools of the trade: Workflow, developer tools, debugging tips</a></li>
-        <li><a href="#performance">Performance: Memory use, performance profiling, browser redraws</a></li>
-        <li><a href="#keepaneyeon">Upcoming: New things coming to JavaScript</a></li>
+        <li><a href="#performance">Under the hood: Browsers, performance and profiling</a></li>
+        <li><a href="#next">On the horizon: Stuff to keep an eye on</a></li>
         <li><a href="#resources">Next steps: Books and other resources</a></li>
     </ol>
     <p class="first">
@@ -129,7 +129,6 @@
 
 <section id="tools" class="links close">
     <h2><i class="foundicon-tools"></i> <span>Tools of the trade</span></h2>
-    <!-- <p>Tools</p> -->
     <ol>
         <li><a href="http://www.youtube.com/watch?v=f7AU2Ozu8eo">
             Javascript Development Workflow of 2013 <span>Paul Irish, youtube.com</span></a></li>
@@ -146,8 +145,7 @@
 
 
 <section id="performance" class="links close">
-    <h2><i class="foundicon-globe"></i> <span>Performance and Browsers</span></h2>
-    <!-- <p>Create lightning fast applications by learning what causes performance problems and how to fix them</p> -->
+    <h2><i class="foundicon-globe"></i> <span>Under the hood</span></h2>
     <ol>
         <li><a href="http://www.html5rocks.com/en/tutorials/internals/howbrowserswork/">
             How browsers work <span>Tali Garsiel & Paul Irish, html5rocks.com</span></a></li>
@@ -167,9 +165,8 @@
 </section>
 
 
-<section id="keepaneyeon" class="links close last">
-    <h2><i class="foundicon-right-arrow"></i> <span>Upcoming</span></h2>
-    <!-- <p>New shit</p> -->
+<section id="next" class="links close last">
+    <h2><i class="foundicon-right-arrow"></i> <span>On the horizon</span></h2>
     <ol>
         <li><a href="http://www.youtube.com/watch?v=X_ek1wSe66o">
             The Web Can Do That!? <span>Eric Bidelman, youtube.com</span></a></li>
