--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       })();
     </script>
 </head>
-<body id="superhero"><div class="container">
+<body id="superhero">
 
 <section class="init one invert"><div class="inner">
     <h1><span>Superhero JavaScript</span></h1>
@@ -206,5 +206,5 @@
 </section>
 
 
-</div></body>
+</body>
 </html>
