--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body id="superhero">
 
 <section class="init one invert"><div class="inner">
-    <h1><span>Superhero JavaScript</span></h1>
+    <h1><span>Superhero.js</span></h1>
     <p>
         Maintaining a large JavaScript code base is not easy &mdash;
         especially since great articles on how to do this are hard to find.
@@ -41,15 +41,15 @@
 
 <section class="alternate toc two">
     <p>
-        We read a lot of great articles on creating, testing and maintaining large JavaScript applications.
-        This page is a continously updated list of articles that help explain the syntax of JavaScript,
+        We come across a lot of great articles on creating, testing and maintaining large JS applications.
+        This page is a continously updated list of articles that help explain the syntax of JS,
         how to organize your projects, how to test your code, and what's on the horizon. Have fun!
     </p>
     <ol>
         <li><a href="#language">Understanding JavaScript: Syntax, style and gotchas</a></li>
-        <li><a href="#organizing">Organizing your code: API design, deferreds, files and folders</a></li>
+        <li><a href="#organizing">Organizing your code: API design, files and folders</a></li>
         <li><a href="#testing">Testing your application: Testable code, readable tests</a></li>
-        <li><a href="#tools">Tools of the trade: Workflow, developer tools, debugging tips</a></li>
+        <li><a href="#tools">Tools of the trade: Workflow, developer tools and debugging</a></li>
         <li><a href="#performance">Under the hood: Browsers, performance and profiling</a></li>
         <li><a href="#next">On the horizon: Stuff to keep an eye on</a></li>
         <li><a href="#resources">Next steps: Books and other resources</a></li>
@@ -139,7 +139,7 @@
 
 
 <section id="performance" class="links close">
-    <h2><i class="foundicon-globe"></i> <span>Under the hood</span></h2>
+    <h2><i class="foundicon-graph"></i> <span>Under the hood</span></h2>
     <ol>
         <li><a href="http://www.html5rocks.com/en/tutorials/internals/howbrowserswork/">
             How browsers work <span>Tali Garsiel & Paul Irish, html5rocks.com</span></a></li>
@@ -160,7 +160,7 @@
 
 
 <section id="next" class="links close last">
-    <h2><i class="foundicon-right-arrow"></i> <span>On the horizon</span></h2>
+    <h2><i class="foundicon-star"></i> <span>On the horizon</span></h2>
     <ol>
         <li><a href="http://www.youtube.com/watch?v=X_ek1wSe66o">
             The Web Can Do That!? <span>Eric Bidelman, youtube.com</span></a></li>
@@ -178,7 +178,7 @@
 </section>
 
 
-<section id="resources" class="more">
+<section id="resources" class="more"><div class="content">
     <h2><i class="foundicon-globe"></i> <span>Books and other resources</span></h2>
     <!-- <p>Books and stuff</p> -->
     <ol class="last">
@@ -190,14 +190,15 @@
             JavaScript Weekly <span>Peter Cooper, javascriptweekly.com</span></a></li>
         <li><a href="http://daily.w3viewer.com/">
             Open Web Platform Daily Digest <span>Sime Vidas, daily.w3viewer.com</span></a></li>
+        <li><a href="http://badassjs.com">Badass JavaScript <span>Devon Govett</span></a></li>
     </ol>
     <h2 id="newsletter"><i class="foundicon-mail"></i> <span>Newsletter</span></h2>
-    <p>Subscribe for updates. No spam, we promise().</p>
+    <p>Subscribe for updates. No spam, we promise();</p>
     <form action="http://superherojs.us5.list-manage2.com/subscribe/post?u=862185f1aae866d58d91bc544&amp;id=87fac3d768" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <p><input type="email" placeholder="E-mail address" value="" name="EMAIL" class="required email" id="mce-EMAIL"></p>
         <p><input type="submit" value="Sign up now" name="subscribe" id="mc-embedded-subscribe"></p>
     </form>
-</section>
+</div></section>
 
 
 </body>
