--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </p>
     <ol>
         <li><a href="#language">Understanding JavaScript: Syntax, style and gotchas</a></li>
-        <li><a href="#organizing">Organizing your code: API design, files and folders</a></li>
+        <li><a href="#organizing">Organizing your code: API design, patterns and frameworks</a></li>
         <li><a href="#testing">Testing your application: Testable code, readable tests</a></li>
         <li><a href="#tools">Tools of the trade: Workflow, developer tools and debugging</a></li>
         <li><a href="#performance">Under the hood: Browsers, performance and profiling</a></li>
