Suggestion link in header

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <p>
         Follow us on <a href="http://twitter.com/superhero_js">Twitter</a>,
         <a href="https://github.com/superherojs/superherojs.github.com">GitHub</a>,
-        or check out our <a href="#newsletter">newsletter</a>.
+        or check out our <a href="#newsletter">newsletter</a>.<br>
+        And we'd love to hear <a href="mailto:mail@superherojs.com">your suggestions</a>.
     </p>
 </div></section>
 
