Better wording in intro

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
     <h1><span>Superhero.js</span></h1>
     <p>
         Maintaining a large JavaScript code base is not easy &mdash;
-        especially since great articles on how to do this are hard to find.
-        This page is a collection of the best articles we've found on the topic.
+        especially since great resources on how to do this are hard to find.
+        This page is a collection of the best articles, videos and presentations
+        we've found on the topic.
     </p>
     <p>
         Follow us on <a href="http://twitter.com/superhero_js">Twitter</a>,
