Forbedret første tekst.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <section class="init one invert"><div class="inner">
     <h1><span>Superhero.js</span></h1>
     <p>
-        Maintaining a large JavaScript code base is not easy &mdash;
+        Creating, testing and maintaining a large JavaScript code base is not easy &mdash;
         especially since great resources on how to do this are hard to find.
         This page is a collection of the best articles, videos and presentations
         we've found on the topic.
