--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
 
 <section id="resources" class="more"><div class="content">
-    <h2><i class="foundicon-globe"></i> <span>Other resources</span></h2>
+    <h2><i class="foundicon-globe"></i> <span>Other superheroes</span></h2>
     <ol class="last">
         <li><a href="http://javascriptweekly.com/">
             JavaScript Weekly <span>Peter Cooper, javascriptweekly.com</span></a></li>
