--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@
             Open Web Platform Daily Digest <span>Sime Vidas, daily.w3viewer.com</span></a></li>
         <li><a href="http://badassjs.com">
             Badass JavaScript <span>Devon Govett, badassjs.com</span></a></li>
+        <li><a href="http://distilledhype.com/">
+            Distilled Hype <span>Kahlil Lechelt, distilledhype.com</span></a></li>
     </ol>
 
     <h2 id="newsletter"><i class="foundicon-mail"></i> <span>Newsletter</span></h2>
