--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
 <section class="alternate toc two">
     <p>
-        We come across a lot of great articles on creating, testing and maintaining large JS applications.
-        This page is a continously updated list of articles that help explain the syntax of JS,
+        We come across a lot of great articles on creating, testing and maintaining large JavaScript applications.
+        This page is a continously updated list of articles that help explain the syntax of JavaScript,
         how to organize your projects, how to test your code, and what's on the horizon. Have fun!
     </p>
     <ol>
