explaining js vm in js

--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
             How browsers work <span>Tali Garsiel & Paul Irish, html5rocks.com</span></a></li>
         <li><a href="http://paulirish.com/2013/webkit-for-developers/">
             WebKit for Developers <span>Paul Irish, paulirish.com</span></a></li>
+        <li><a href="http://www.youtube.com/watch?v=y8hVeKMD_oM">
+            mö.js - explaining js vm in js <span>Vyacheslav Egorov, youtube.com</span></a></li>
     </ol>
 </section>
 
