--- a/index.html
+++ b/index.html
@@ -173,6 +173,8 @@
             How browsers work <span>Tali Garsiel & Paul Irish, html5rocks.com</span></a></li>
         <li><a href="http://paulirish.com/2013/webkit-for-developers/">
             WebKit for Developers <span>Paul Irish, paulirish.com</span></a></li>
+        <li><a href="http://www.youtube.com/watch?v=y8hVeKMD_oM">
+            mö.js - explaining js vm in js <span>Vyacheslav Egorov, youtube.com</span></a></li>
         <li><a href="http://shop.oreilly.com/product/9780596802806.do">
             <strong>Book</strong> High Performance JavaScript <span>Nicholas C. Zakas</span></a></li>
     </ol>
