Add Eloquent JavaScript

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <li><a href="https://github.com/airbnb/javascript">
             Style Guide: A mostly reasonable approach to JavaScript <span>Airbnb, github.com/airbnb</span></a></li>
     </ol>
+    <p>Longer resource: <a href="http://eloquentjavascript.net/">Eloquent JavaScript: A Modern Introduction to Programming <span>Marijn Haverbeke</span></a></p>
     <p>Longer resource: <a href="http://shop.oreilly.com/product/9780596517748.do">JavaScript: The Good Parts <span>Douglas Crockford</span></a></p>
 </section>
 
