--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <li><a href="#performance">Performance and Profiling: Fast and memory-efficient code</a></li>
         <li><a href="#browser">Under the hood: Understanding the browser</a></li>
         <li><a href="#next">On the horizon: Stuff to keep an eye on</a></li>
-        <li><a href="#resources">Next steps: Books and other resources</a></li>
+        <li><a href="#resources">The league of awesome: Other superheroic resources</a></li>
     </ol>
     <p class="first">
         Organized by
@@ -219,6 +219,8 @@
             Badass JavaScript <span>Devon Govett, badassjs.com</span></a></li>
         <li><a href="http://distilledhype.com/">
             Distilled Hype <span>Kahlil Lechelt, distilledhype.com</span></a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/JavaScript">
+            Mozilla Developer Network <span>Mozilla, mozilla.org</span></a></li>
     </ol>
 
     <h2 id="newsletter"><i class="foundicon-mail"></i> <span>Newsletter</span></h2>
