--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             Common JavaScript "Gotchas" <span>James Fuller, jblotus.com</span></a></li>
         <li><a href="http://www.codethinked.com/preparing-yourself-for-modern-javascript-development">
             Preparing Yourself for Modern JavaScript Development <span>Justin Etheredge, codethinked.com</span></a></li>
-        <li><a href="http://blog.vjeux.com/2011/javascript/how-prototypal-inheritance-really-works.html">
-            How Prototypal Inheritance really works <span>Christopher Chedeau, vjeux.com</span></a></li>
+        <li><a href="http://msdn.microsoft.com/en-us/magazine/ff852808.aspx">
+            Prototypes and Inheritance in JavaScript, <span>Scott Allen, msdn.microsoft.com</span></a></li>
         <li><a href="https://github.com/airbnb/javascript">
             Style Guide: A mostly reasonable approach to JavaScript <span>Airbnb, github.com/airbnb</span></a></li>
         <li><a href="http://eloquentjavascript.net/">
