fix github link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </p>
     <p>
         Follow us on <a href="http://twitter.com/superhero_js">Twitter</a>,
-        <a href="https://github.com/superherojs/superherojs.github.com">GitHub</a>,
+        <a href="https://github.com/superherojs/superherojs">GitHub</a>,
         or check out our <a href="#newsletter">newsletter</a>.<br>
         And we'd love to hear <a href="mailto:mail@superherojs.com">your suggestions</a>.
     </p>
