add BrazilJs Weekly superheroes

--- a/index.html
+++ b/index.html
@@ -221,6 +221,8 @@
             Distilled Hype <span>Kahlil Lechelt, distilledhype.com</span></a></li>
         <li><a href="https://developer.mozilla.org/en-US/docs/JavaScript">
             Mozilla Developer Network <span>Mozilla, mozilla.org</span></a></li>
+        <li><a href="http://braziljs.org/#get-involved">
+            BrazilJS Weekly <span>BrazilJS Foundatlion, braziljs.org</span></a></li>
     </ol>
 
     <h2 id="newsletter"><i class="foundicon-mail"></i> <span>Newsletter</span></h2>
