Start of thanks section

--- a/index.html
+++ b/index.html
@@ -232,5 +232,15 @@
 </div></section>
 
 
+<section id="thanks" class="credits"><div class="content">
+    <h2><i class="foundicon-smiley"></i> <span>Superthanks!</span></h2>
+    <ul>
+        <li>Tine Kleivane</li>
+        <li>Thomas Johan Eggum</li>
+        <li>Addy Osmani</li>
+    </ul>
+</div></section>
+
+
 </body>
 </html>
