Fix twitter name.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         Organized by
         <a href="http://kimjoar.net">@kimjoar</a>,
         <a href="https://twitter.com/madsmobaek">@madsmobaek</a> and
-        <a href="http://bjorkoy.com/">@olav</a>.
+        <a href="http://bjorkoy.com/">@vandelay</a>.
     </p>
 </section>
 
