Add more people

--- a/index.html
+++ b/index.html
@@ -237,7 +237,10 @@
     <ul>
         <li>Tine Kleivane</li>
         <li>Thomas Johan Eggum</li>
-        <li>Addy Osmani</li>
+        <li><a href="http://addyosmani.com/blog/">Addy Osmani</a></li>
+        <li><a href="https://github.com/benjamingr">benjamingr</a></li>
+        <li><a href="https://twitter.com/thibpat">Thibaut Patel</a></li>
+        <li>wmblaettler</li>
     </ul>
 </div></section>
 
