Link to Tine and Thomas

--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
 <section id="thanks" class="credits"><div class="content">
     <h2><i class="foundicon-smiley"></i> <span>Superthanks!</span></h2>
     <ul>
-        <li>Tine Kleivane</li>
-        <li>Thomas Johan Eggum</li>
+        <li><a href="https://twitter.com/tinekl">Tine Kleivane</a></li>
+        <li><a href="https://github.com/thomaseggum">Thomas Johan Eggum</a></li>
         <li><a href="http://addyosmani.com/blog/">Addy Osmani</a></li>
         <li><a href="https://github.com/benjamingr">benjamingr</a></li>
         <li><a href="https://twitter.com/thibpat">Thibaut Patel</a></li>
