--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
         <li><a href="https://github.com/benjamingr">benjamingr</a></li>
         <li><a href="https://twitter.com/thibpat">Thibaut Patel</a></li>
         <li>wmblaettler</li>
+        <li><a href="https://github.com/johnkors">John Korsnes</a></li>
     </ul>
 </div></section>
 
