--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@
 <section id="security" class="links close">
     <h2><i class="foundicon-lock"></i> <span>Securing your app</span></h2>
     <ol>
+        <li><a href="http://www.youtube.com/watch?v=zKuFu19LgZA">
+            Principles of Security <span>Douglas Crockford, youtube.com</span></a></li>
         <li><a href="https://github.com/eoftedal/writings/blob/master/published/javascript-security-cheat-sheet.md">
             Single Page Web App Security Cheat Sheet <span>Erlend Oftedal, github.com/eoftedal</span></a></li>
         <li><a href="http://shop.oreilly.com/product/9781593273880.do">
