--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <li><a href="#testing">Testing your application: Testable code, readable tests</a></li>
         <li><a href="#tools">Tools of the trade: Workflow, developer tools and debugging</a></li>
         <li><a href="#performance">Performance and Profiling: Fast and memory-efficient code</a></li>
-        <li><a href="#security">Securing your app: ...</a></li>
+        <li><a href="#security">Securing your app: Principles, access control and validation</a></li>
         <li><a href="#browser">Under the hood: Understanding the browser</a></li>
         <li><a href="#next">On the horizon: Stuff to keep an eye on</a></li>
         <li><a href="#resources">The league of awesome: Other superheroic resources</a></li>
