Fix overlapping image in ToC + thanks.

--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
         <li><a href="https://twitter.com/thibpat">Thibaut Patel</a></li>
         <li>wmblaettler</li>
         <li><a href="https://github.com/johnkors">John Korsnes</a></li>
+        <li><a href="https://github.com/chenzihui">Chen Zihui</a></li>
     </ul>
 </div></section>
 
