--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
         <li>wmblaettler</li>
         <li><a href="https://github.com/johnkors">John Korsnes</a></li>
         <li><a href="https://github.com/chenzihui">Chen Zihui</a></li>
+        <li><a href="http://hinderberg.no">Hans Magnus Inderberg</a></li>
     </ul>
 </div></section>
 
