--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
             Pure JavaScript <span>Christian Johansen, vimeo.com</span></a></li>
         <li><a href="http://html5doctor.com/methods-of-communication/">
             Methods of communication <span>Remy Sharp, html5doctor.com</span></a></li>
-        <li><a href="http://tjholowaychuk.com/post/27984551477/components">
-            Components <span>TJ Holowaychuk, tjholowaychuk.com</span></a></li>
+        <li><a href="https://github.com/twitter/bower">
+            Bower: A Package manager for the web <span>github.com/twitter</span></a></li>
         <li><a href="http://merrickchristensen.com/articles/javascript-dependency-injection.html">
             JavaScript Dependency Injection <span>Merrick Christensen, merrickchristensen.com</span></a></li>
     </ol>
