Update URL to Open Web Platform Daily Digest

--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
     <ol class="last">
         <li><a href="http://javascriptweekly.com/">
             JavaScript Weekly <span>Peter Cooper, javascriptweekly.com</span></a></li>
-        <li><a href="http://daily.w3viewer.com/">
-            Open Web Platform Daily Digest <span>Sime Vidas, daily.w3viewer.com</span></a></li>
+        <li><a href="http://webplatformdaily.org/">
+            Open Web Platform Daily Digest <span>Sime Vidas, webplatformdaily.org</span></a></li>
         <li><a href="http://badassjs.com">
             Badass JavaScript <span>Devon Govett, badassjs.com</span></a></li>
         <li><a href="http://distilledhype.com/">
