--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <section class="alternate toc two">
     <p>
         We come across a lot of great articles on creating, testing and maintaining large JavaScript applications.
-        This page is a continously updated list of articles that help explain the syntax of JavaScript,
+        This page is a continuously updated list of articles that help explain the syntax of JavaScript,
         how to organize your projects, how to test your code, and what's on the horizon. Have fun!
     </p>
     <ol>
