Adding atom feed

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href='icons/stylesheets/general_foundicons.css' rel='stylesheet' type='text/css'>
     <link href='css/reset.css' rel='stylesheet' type='text/css'>
     <link href='css/style.css' rel='stylesheet' type='text/css'>
+    <link type="application/atom+xml" rel="alternate" href="/feed.atom" title="Atom feed" />
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
@@ -43,6 +44,7 @@
     <p>
         Follow us on <a href="http://twitter.com/superhero_js">Twitter</a>,
         <a href="https://github.com/superherojs/superherojs">GitHub</a>,
+        <a href="/feed.atom">RSS</a>,
         or check out our <a href="#newsletter">newsletter</a>.<br>
         And we'd love to hear <a href="mailto:mail@superherojs.com">your suggestions</a>.
     </p>
