add JavaScript Garden Fixes #25

--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
             Prototypes and Inheritance in JavaScript <span>Scott Allen, msdn.microsoft.com</span></a></li>
         <li><a href="https://github.com/airbnb/javascript">
             Style Guide: A mostly reasonable approach to JavaScript <span>Airbnb, github.com/airbnb</span></a></li>
+        <li><a href="http://bonsaiden.github.io/JavaScript-Garden/">
+            JavaScript Garden: The quirky parts of JavaScript <span>Ivo Wetzel, github.com/BonsaiDen</span></a></li>
         <li><a href="https://www.codeschool.com/paths/javascript">
             <strong>Course</strong> Code School: The JavaScript Path <span>Code School</span></a></li>
         <li><a href="http://eloquentjavascript.net/2nd_edition/preview/">
