Improve choice of js testing book

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
             The Plight of Pinocchio: JavaScript's quest to become a real language <span>Brandon Keepers, opensoul.org</span></a></li>
         <li><a href="http://www.letscodejavascript.com/">
             <strong>Course</strong>Let's Code: Test-Driven JavaScript <span>James Shore, letscodejavascript.com</span></a></li>
-        <li><a href="http://shop.oreilly.com/product/0636920024699.do">
-            <strong>Book</strong> Testable JavaScript <span>Mark Ethan Trostler</span></a></li>
+        <li><a href="http://jstesting.jcoglan.com/">
+            <strong>Book</strong> JavaScript Testing Recipes <span>James Coglan</span></a></li>
     </ol>
 </section>
 
