--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="apple-mobile-web-app-capable" content="no">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-    <link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=Bangers" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" type="text/css">
 
-    <link href='icons/stylesheets/general_foundicons.css' rel='stylesheet' type='text/css'>
-    <link href='css/reset.css' rel='stylesheet' type='text/css'>
-    <link href='css/style.css' rel='stylesheet' type='text/css'>
+    <link href="icons/stylesheets/general_foundicons.css" rel="stylesheet" type="text/css">
+    <link href="css/reset.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
     <link type="application/atom+xml" rel="alternate" href="/feed.atom" title="Atom feed" />
 
     <script type="text/javascript">
