Added Secrets of JS Ninja by John Resig and Pro JS for Web Developers by Nick Zakas

--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
             <strong>Book</strong> Eloquent JavaScript <span>Marijn Haverbeke</span></a></li>
         <li><a href="http://effectivejs.com/">
             <strong>Book</strong> Effective JavaScript <span>David Herman</span></a></li>
+        <li><a href="http://jsninja.com">
+            <strong>Book</strong> Secrets of the JavaScript Ninja <span>John Resig</span></a></li>
+        <li><a href="http://www.amazon.com/Professional-JavaScript-Developers-Nicholas-Zakas/dp/1118026691">
+            <strong>Book</strong> Professional JavaScript for Web Developers <span>Nicholas Zakas</span></a></li>
     </ol>
 </section>
 
