broken link #46 tj holowaychuks component
redirected now to his tumblr

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             Immutability, interactivity & JavaScript <span>David Nolen, youtube.com</span></a></li>
         <li><a href="http://html5doctor.com/methods-of-communication/">
             Methods of communication <span>Remy Sharp, html5doctor.com</span></a></li>
-        <li><a href="http://tjholowaychuk.com/post/27984551477/components">
+        <li><a href="http://tjholowaychuk.tumblr.com/post/27984551477/components">
             Components <span>TJ Holowaychuk, tjholowaychuk.com</span></a></li>
         <li><a href="http://merrickchristensen.com/articles/javascript-dependency-injection.html">
             JavaScript Dependency Injection <span>Merrick Christensen, merrickchristensen.com</span></a></li>
