Add intro to FRP. Fixes #36

--- a/index.html
+++ b/index.html
@@ -226,6 +226,8 @@
             Immutability, interactivity & JavaScript <span>David Nolen, youtube.com</span></a></li>
         <li><a href="http://html5doctor.com/methods-of-communication/">
             Methods of communication <span>Remy Sharp, html5doctor.com</span></a></li>
+        <li><a href="https://gist.github.com/staltz/868e7e9bc2a7b8c1f754">
+            The introduction to Reactive Programming you've been missing <span>André Staltz, github.com/staltz</span></a></li>
         <li><a href="http://tjholowaychuk.tumblr.com/post/27984551477/components">
             Components <span>TJ Holowaychuk, tjholowaychuk.com</span></a></li>
         <li><a href="http://merrickchristensen.com/articles/javascript-dependency-injection.html">
