--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link href="icons/stylesheets/general_foundicons.css" rel="stylesheet" type="text/css">
     <link href="css/reset.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link type="application/atom+xml" rel="alternate" href="/feed.atom" title="Atom feed" />
+    <link type="application/atom+xml" rel="alternate" href="/feed.atom" title="Atom feed">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
