--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
     <p class="first">
         Organized by
         <a href="http://kimjoar.net">@kimjoar</a>,
-        <a href="https://twitter.com/madsmobaek">@madsmobaek</a> and
-        <a href="http://bjorkoy.com/">@vandelay</a>.
+        <a href="https://twitter.com/madsmobaek">@madsmobaek</a>,
+        <a href="http://bjorkoy.com/">@vandelay</a>,
+        <a href="https://twitter.com/mollerse">@mollerse</a> and
+        <a href="https://twitter.com/mikaelbrevik">@mikaelbrevik</a>,
     </p>
 </section>
 
