--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <a href="https://twitter.com/madsmobaek">@madsmobaek</a>,
         <a href="http://bjorkoy.com/">@vandelay</a>,
         <a href="https://twitter.com/mollerse">@mollerse</a> and
-        <a href="https://twitter.com/mikaelbrevik">@mikaelbrevik</a>,
+        <a href="https://twitter.com/mikaelbrevik">@mikaelbrevik</a>.
     </p>
 </section>
 
