Adds event loop talk by Philip Roberts. Fixes #49

--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
 <section id="browser" class="links close">
     <h2><i class="foundicon-settings"></i> <span>Under the hood</span></h2>
     <ol>
+        <li><a href="http://2014.jsconf.eu/speakers/philip-roberts-what-the-heck-is-the-event-loop-anyway.html">
+            What the heck is the event loop anyway? <span>Philip Roberts, 2014.jsconf.eu</span></a></li>
         <li><a href="http://www.html5rocks.com/en/tutorials/internals/howbrowserswork/">
             How browsers work <span>Tali Garsiel & Paul Irish, html5rocks.com</span></a></li>
         <li><a href="http://paulirish.com/2013/webkit-for-developers/">
