--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
             Deploying JavaScript Applications <span>Alex Sexton, alexsexton.com</span></a></li>
         <li><a href="https://www.youtube.com/watch?v=mS264h8KGwk">
             Immutability, interactivity & JavaScript <span>David Nolen, youtube.com</span></a></li>
+        <li><a href="http://jbi.sh/what-is-virtual-dom/">
+            What is virtual DOM? <span>Jack Bishop, jbi.sh</span></a></li>
         <li><a href="http://html5doctor.com/methods-of-communication/">
             Methods of communication <span>Remy Sharp, html5doctor.com</span></a></li>
         <li><a href="https://gist.github.com/staltz/868e7e9bc2a7b8c1f754">
