Adds a fixed header when scrolling passed original menu

--- a/index.html
+++ b/index.html
@@ -54,7 +54,20 @@
         </nav>
     </header>
 
-    <figure>
+    <figure class="largeHeader">
+        <a href="."><img src="assets/img/logo-main.svg" alt="Superherojs"></a>
+        <a href="#understand"><img src="assets/img/logo-understand.svg" alt="Understand"></a>
+        <a href="#organize"><img src="assets/img/logo-organize.svg" alt="Organize"></a>
+        <a href="#supertools"><img src="assets/img/logo-tools.svg" alt="Supertools"></a>
+        <a href="#resources"><img src="assets/img/logo-resources.svg" alt="Resources"></a>
+        <a href="#internals"><img src="assets/img/logo-internals.svg" alt="Internals"></a>
+        <a href="#secure"><img src="assets/img/logo-secure.svg" alt="Secure"></a>
+        <a href="#testing"><img src="assets/img/logo-testing.svg" alt="Testing"></a>
+        <a href="#future"><img src="assets/img/logo-future.svg" alt="The Future"></a>
+        <a href="#perform"><img src="assets/img/logo-perform.svg" alt="Perform"></a>
+    </figure>
+
+    <figure class="smallHeader">
         <a href="."><img src="assets/img/logo-main.svg" alt="Superherojs"></a>
         <a href="#understand"><img src="assets/img/logo-understand.svg" alt="Understand"></a>
         <a href="#organize"><img src="assets/img/logo-organize.svg" alt="Organize"></a>
@@ -386,5 +399,6 @@
 
 </footer>
 
+<script src="assets/js/header.js"></script>
 </body>
 </html>
