Fixed footer, with small images.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </nav>
     </header>
 
-    <figure class="largeHeader">
+    <figure>
         <a href="."><img src="assets/img/logo-main.svg" alt="Superherojs"></a>
         <a href="#understand"><img src="assets/img/logo-understand.svg" alt="Understand"></a>
         <a href="#organize"><img src="assets/img/logo-organize.svg" alt="Organize"></a>
@@ -67,18 +67,20 @@
         <a href="#perform"><img src="assets/img/logo-perform.svg" alt="Perform"></a>
     </figure>
 
-    <figure class="smallHeader">
-        <a href="."><img src="assets/img/logo-main.svg" alt="Superherojs"></a>
-        <a href="#understand"><img src="assets/img/logo-understand.svg" alt="Understand"></a>
-        <a href="#organize"><img src="assets/img/logo-organize.svg" alt="Organize"></a>
-        <a href="#supertools"><img src="assets/img/logo-tools.svg" alt="Supertools"></a>
-        <a href="#resources"><img src="assets/img/logo-resources.svg" alt="Resources"></a>
-        <a href="#internals"><img src="assets/img/logo-internals.svg" alt="Internals"></a>
-        <a href="#secure"><img src="assets/img/logo-secure.svg" alt="Secure"></a>
-        <a href="#testing"><img src="assets/img/logo-testing.svg" alt="Testing"></a>
-        <a href="#future"><img src="assets/img/logo-future.svg" alt="The Future"></a>
-        <a href="#perform"><img src="assets/img/logo-perform.svg" alt="Perform"></a>
-    </figure>
+    <aside>
+        <div class="inner">
+            <a href="."><img src="assets/img/logo-main-small.svg" alt="Superherojs"></a>
+            <a href="#understand"><img src="assets/img/logo-understand-small.svg" alt="Understand"></a>
+            <a href="#organize"><img src="assets/img/logo-organize-small.svg" alt="Organize"></a>
+            <a href="#supertools"><img src="assets/img/logo-tools-small.svg" alt="Supertools"></a>
+            <a href="#resources"><img src="assets/img/logo-resources-small.svg" alt="Resources"></a>
+            <a href="#internals"><img src="assets/img/logo-internals-small.svg" alt="Internals"></a>
+            <a href="#secure"><img src="assets/img/logo-secure-small.svg" alt="Secure"></a>
+            <a href="#testing"><img src="assets/img/logo-testing-small.svg" alt="Testing"></a>
+            <a href="#future"><img src="assets/img/logo-future-small.svg" alt="The Future"></a>
+            <a href="#perform"><img src="assets/img/logo-perform-small.svg" alt="Perform"></a>
+        </div>
+    </aside>
 
     <section id="understand" class="c1">
         <img src="assets/img/logo-understand-dark.svg" alt="Understand">
@@ -399,6 +401,6 @@
 
 </footer>
 
-<script src="assets/js/header.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
